--- a/Mission4Assignment/wwwroot/css/StyleSheet.css
+++ b/Mission4Assignment/wwwroot/css/StyleSheet.css
@@ -49,3 +49,27 @@ label {
     display: block;
     margin-bottom: 8px;
 }
+
+#navbarlist {
+    float: left;
+}
+
+#navbarul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+    a:hover {
+        background-color: #111;
+    }
